tests/regression/errors/basic/undefined_var_7.csd
// Undefined variable test 7
vibez.spill("Using undefined:", undefined_var_7)
sus result drip = missing_variable + 7
